Adds getall method and AllBooks page

--- a/BookCatalogue.Presentation/Components/_Imports.razor
+++ b/BookCatalogue.Presentation/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BookCatalogue.Presentation
 @using BookCatalogue.Presentation.Components
+@using BookCalalogue.Domain
+@using BookCatalogue.Domain.Enums
+@using BookCatalogue.Application.Interfaces
