Adds getbyid and update methods, implementds editpage passing the Id as a parameter

--- a/BookCatalogue.Presentation/Components/BookCard.razor
+++ b/BookCatalogue.Presentation/Components/BookCard.razor
@@ -3,6 +3,9 @@
         <h5>@book.Title</h5>
         <i> @book.Author | @book.PublicationDate?.ToString("dd MMMM, yyy")</i>
     </div>
+    <div class="actions">
+        <a href="@($"/edit/{book.Id}")" class="btn btn-info shadow-none">Edit</a>
+    </div>
 </div>
 
 @code {
